# ssh-app

./: .env  .gitignore  .prettierrc  LICENSE  README.md  generate-docs.sh  package.json  tsconfig.json
.github/workflows/: release.yml
scripts/: generate.latest.json.js  generate.updater.json.js
src/: App.tsx  app.config.ts  theme.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/Screens/Connect.form/: Connect.form.tsx  index.ts
src/components/Screens/Connect.screen/: Connect.screen.tsx  index.ts
src/components/Screens/Connected.screen/: Connected.screen.tsx  index.ts
src/components/Screens/Main.screen/: Main.screen.tsx
src/components/Store/: Store.provider.tsx  useAppState.ts
src/components/UI/Async/: Async.tsx
src/components/UI/Board/: Board.tsx
src/components/UI/Board.header/: Board.header.tsx  index.ts
src/components/UI/ErrorBlock/: ErrorBlock.tsx
src/components/UI/Field/: Field.styles.ts  Field.tsx  FormField.types.ts  index.ts
src/components/UI/Formik/Formik.field.status/: Formik.field.status.tsx  index.ts
src/components/UI/Formik/Formik.fields/Formik.select.file/: Formik.select.file.tsx  index.ts
src/components/UI/Formik/Formik.fields/Formik.submit/: Formik.submit.tsx  Submit.Btn.tsx  index.ts
src/components/UI/Formik/Formik.fields/Formik.text/: Formik.text.tsx  index.ts
src/components/UI/Formik/Formik.form/: Formik.form.tsx  index.ts
src/components/UI/Icon/: Icon.tsx  fa.defaults.ts
src/components/UI/Spinner/: Spinner.styles.tsx  Spinner.tsx
src/theme/: colors.ts  globalStyles.tsx  reactModal.styles.tsx  theme.ts
src/utils/: useGetNotificationPermission.ts  useSettings.ts  useState.ts
ssh-app/: updater.json
ssh-tunnel/: Cargo.toml
ssh-tunnel/doc/: abnormal-seq.puml  normal-seq.puml
ssh-tunnel/src/: config.rs  lib.rs  logger.rs  main.rs  status.rs  tunnel.rs
