[package]
name = "ssh-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.8", features = ["derive"]}
ctrlc = "3.2.2"
num-derive = "0.3.3"
num-traits = "0.2.15"
regex = "1.6.0"